fix(docs,css): double border

--- a/resources/css/docs-formatted-content.css
+++ b/resources/css/docs-formatted-content.css
@@ -10,7 +10,7 @@
   background-size: 24px 24px;
   border-color: #555555aa;
   border-style: dashed;
-  border-width: 4px;
+  border-width: 2px;
   display: flex;
   flex-direction: column;
   margin: 20px 0;
