--- a/resources/css/docs-hljs.css
+++ b/resources/css/docs-hljs.css
@@ -122,14 +122,16 @@ code[class] {
     font-size: var(--font-size-code-smaller);
     border-color: var(--color-border);
     border-style: solid;
-    border-width: 0 0 1px 1px;
     padding: 6px 10px;
     pointer-events: none;
     user-select: none;
     z-index: 1;
 
+    @media screen and (max-width: 1023px) {
+      border-width: 0 0 1px 0;
+    }
     @media screen and (min-width: 1024px) {
-      border-top-right-radius: 4px;
+      border-width: 0 0 1px 1px;
       position: absolute;
       top: 0;
       right: 0;
